--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -18,7 +18,7 @@ colors:
     white: '#f8f8f2'
     yellow: '#f4bf75'
   primary:
-    background: '#171714'
+    background: '#1c1b22'
     foreground: '#f8f8f2'
 font:
   bold:
