Modified rofi power menu

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -24,22 +24,24 @@ font-2 = "Font Awesome 6 Free Solid:style=Solid:size=15;5"
 font-3 = "Font Awesome v4 Compatibility Regular:style=Regular:size=15;5"
 font-4 = "Font Awesome 6 Free Regular:style=Regular:size=15;5"
 
-modules-left = powermenu
-modules-center = bspwm
-modules-right = systray date
+modules-left = bspwm
+modules-center = date
+modules-right = systray powermenu
 
 cursor-click = pointer
 
 [bar/external]
-monitor = HDMI-1-1
+monitor = HDMI-1-0
 modules-left =
 modules-center = bspwm
 modules-right = date
 inherit = bar/main
 
 [module/systray]
+format-padding-left = 10pt
 type = internal/tray
 tray-spacing = 4pt
+tray-size = 60%
 
 [settings]
 screenchange-reload = true
@@ -49,6 +51,8 @@ format-padding = 1
 type = internal/bspwm
 
 format = <label-state> <label-mode>
+format-padding = 4
+radius = 6
 
 label-focused = %index%
 label-focused-foreground = ${colors.base}
@@ -71,7 +75,7 @@ label-empty-padding = 4
 type = internal/date
 interval = 1
 
-time = "%a, %b %d %H:%M"
+time = "%b %d %H:%M"
 
 format = <label>
 format-padding = 5
@@ -79,8 +83,6 @@ label = %{T1}%time%%{T-}
 
 [module/powermenu]
 type = custom/text
-content = "⏻"
+label = "⏻"
 click-left = ~/.config/rofi/scripts/rofi-power.sh
-content-padding = 3
-content-foreground = ${colors.crust}
-content-background = ${colors.text}
+label-padding-right = 4
