Changed appearance on polybar and rofi

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -2,9 +2,14 @@ include-file = $HOME/.config/polybar/dark-minimalist.ini
 
 [bar/main]
 height = 40
-offset-y = 0
+offset-x = 10
+offset-y = 12
 top = true
 fixed-center = true
+width = 99%
+radius = 12
+border-size = 2
+border-color = #757480
 
 wm-restack = bspwm
 
@@ -19,10 +24,7 @@ background = ${colors.crust}
 foreground = ${colors.text}
 
 font-0 = "Cantarell:style=Bold:size=13;3"
-font-1 = "Font Awesome 6 Brands Regular:style=Regular:size=15;5"
-font-2 = "Font Awesome 6 Free Solid:style=Solid:size=15;5"
-font-3 = "Font Awesome v4 Compatibility Regular:style=Regular:size=15;5"
-font-4 = "Font Awesome 6 Free Regular:style=Regular:size=15;5"
+font-1 = "CaskaydiaCove NFM::style=Regular:size=20;5"
 
 modules-left = bspwm
 modules-center = date
@@ -31,7 +33,7 @@ modules-right = systray powermenu
 cursor-click = pointer
 
 [bar/external]
-monitor = HDMI-1-0
+monitor = eDP-1
 modules-left =
 modules-center = bspwm
 modules-right = date
